// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SystemPolicyCards component should render loading state 1`] = `
<div
  className="pf-l-grid pf-m-gutter"
>
  <div
    className="pf-l-grid__item pf-m-12-col-on-sm pf-m-12-col-on-md pf-m-6-col-on-lg pf-m-4-col-on-xl"
  >
    <article
      className="pf-c-card"
    >
      <div
        className="pf-c-card__body"
      >
        <div
          className="pf-c-content margin-bottom-md"
        >
          <small
            className="margin-bottom-none"
            data-pf-content={true}
          >
            External policy
          </small>
          <h4
            className="margin-bottom-top-none"
            data-pf-content={true}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <span
              width={0}
            >
              <span />
              <span>
                PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7
              </span>
              <span
                style={
                  Object {
                    "left": 0,
                    "position": "fixed",
                    "top": 0,
                    "visibility": "hidden",
                  }
                }
              >
                …
              </span>
            </span>
          </h4>
        </div>
        <div
          className="margin-bottom-md"
        >
          <div
            className="ins-c-policy-card ins-m-noncompliant"
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                transform=""
              />
            </svg>
             Noncompliant
          </div>
          <small
            className=""
            data-pf-content={true}
          >
            30
             of 
            40
             rules passed (
            75%
            )
          </small>
        </div>
        <div
          className="margin-bottom-md"
        >
          <p
            className="wrap-break-word"
            data-pf-content={true}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            Profile 
            <br />
            <span
              width={0}
            >
              <span />
              <span>
                xccdf_org.ssgproject.content_profile_pci-dss
              </span>
              <span
                style={
                  Object {
                    "left": 0,
                    "position": "fixed",
                    "top": 0,
                    "visibility": "hidden",
                  }
                }
              >
                …
              </span>
            </span>
          </p>
        </div>
        <small
          className="margin-bottom-none"
          data-pf-content={true}
        >
          Last scanned: 
          <span>
            11 months ago
          </span>
        </small>
      </div>
    </article>
  </div>
  <div
    className="pf-l-grid__item pf-m-4-col"
  >
    <article
      className="pf-c-card"
    >
      <div
        className="pf-c-card__body"
      >
        <svg
          aria-labelledby="Loading interface..."
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 400 480"
        >
          <title>
            Loading interface...
          </title>
          <rect
            clipPath="url(#6sy3go9waes)"
            height={480}
            style={
              Object {
                "fill": "url(#ah7zx0ex2q5)",
              }
            }
            width={400}
            x="0"
            y="0"
          />
          <defs>
            <clipPath
              id="6sy3go9waes"
            >
              <circle
                cx="30"
                cy="30"
                r="30"
              />
              <rect
                height="13"
                rx="4"
                ry="4"
                width="100"
                x="75"
                y="13"
              />
              <rect
                height="8"
                rx="4"
                ry="4"
                width="50"
                x="75"
                y="37"
              />
              <rect
                height="400"
                rx="5"
                ry="5"
                width="400"
                x="0"
                y="70"
              />
            </clipPath>
            <linearGradient
              id="ah7zx0ex2q5"
            >
              <stop
                offset="0%"
                stopColor="#f0f0f0"
                stopOpacity={1}
              >
                <animate
                  attributeName="offset"
                  dur="2s"
                  repeatCount="indefinite"
                  values="-3; 1"
                />
              </stop>
              <stop
                offset="50%"
                stopColor="#e0e0e0"
                stopOpacity={1}
              >
                <animate
                  attributeName="offset"
                  dur="2s"
                  repeatCount="indefinite"
                  values="-2; 2"
                />
              </stop>
              <stop
                offset="100%"
                stopColor="#f0f0f0"
                stopOpacity={1}
              >
                <animate
                  attributeName="offset"
                  dur="2s"
                  repeatCount="indefinite"
                  values="-1; 3"
                />
              </stop>
            </linearGradient>
          </defs>
        </svg>
      </div>
    </article>
  </div>
  <div
    className="pf-l-grid__item pf-m-4-col"
  >
    <article
      className="pf-c-card"
    >
      <div
        className="pf-c-card__body"
      >
        <svg
          aria-labelledby="Loading interface..."
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 400 480"
        >
          <title>
            Loading interface...
          </title>
          <rect
            clipPath="url(#3eyu80fnaov)"
            height={480}
            style={
              Object {
                "fill": "url(#7hrdli9rrif)",
              }
            }
            width={400}
            x="0"
            y="0"
          />
          <defs>
            <clipPath
              id="3eyu80fnaov"
            >
              <circle
                cx="30"
                cy="30"
                r="30"
              />
              <rect
                height="13"
                rx="4"
                ry="4"
                width="100"
                x="75"
                y="13"
              />
              <rect
                height="8"
                rx="4"
                ry="4"
                width="50"
                x="75"
                y="37"
              />
              <rect
                height="400"
                rx="5"
                ry="5"
                width="400"
                x="0"
                y="70"
              />
            </clipPath>
            <linearGradient
              id="7hrdli9rrif"
            >
              <stop
                offset="0%"
                stopColor="#f0f0f0"
                stopOpacity={1}
              >
                <animate
                  attributeName="offset"
                  dur="2s"
                  repeatCount="indefinite"
                  values="-3; 1"
                />
              </stop>
              <stop
                offset="50%"
                stopColor="#e0e0e0"
                stopOpacity={1}
              >
                <animate
                  attributeName="offset"
                  dur="2s"
                  repeatCount="indefinite"
                  values="-2; 2"
                />
              </stop>
              <stop
                offset="100%"
                stopColor="#f0f0f0"
                stopOpacity={1}
              >
                <animate
                  attributeName="offset"
                  dur="2s"
                  repeatCount="indefinite"
                  values="-1; 3"
                />
              </stop>
            </linearGradient>
          </defs>
        </svg>
      </div>
    </article>
  </div>
  <div
    className="pf-l-grid__item pf-m-4-col"
  >
    <article
      className="pf-c-card"
    >
      <div
        className="pf-c-card__body"
      >
        <svg
          aria-labelledby="Loading interface..."
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 400 480"
        >
          <title>
            Loading interface...
          </title>
          <rect
            clipPath="url(#96f82mrno1j)"
            height={480}
            style={
              Object {
                "fill": "url(#zwd571hx0di)",
              }
            }
            width={400}
            x="0"
            y="0"
          />
          <defs>
            <clipPath
              id="96f82mrno1j"
            >
              <circle
                cx="30"
                cy="30"
                r="30"
              />
              <rect
                height="13"
                rx="4"
                ry="4"
                width="100"
                x="75"
                y="13"
              />
              <rect
                height="8"
                rx="4"
                ry="4"
                width="50"
                x="75"
                y="37"
              />
              <rect
                height="400"
                rx="5"
                ry="5"
                width="400"
                x="0"
                y="70"
              />
            </clipPath>
            <linearGradient
              id="zwd571hx0di"
            >
              <stop
                offset="0%"
                stopColor="#f0f0f0"
                stopOpacity={1}
              >
                <animate
                  attributeName="offset"
                  dur="2s"
                  repeatCount="indefinite"
                  values="-3; 1"
                />
              </stop>
              <stop
                offset="50%"
                stopColor="#e0e0e0"
                stopOpacity={1}
              >
                <animate
                  attributeName="offset"
                  dur="2s"
                  repeatCount="indefinite"
                  values="-2; 2"
                />
              </stop>
              <stop
                offset="100%"
                stopColor="#f0f0f0"
                stopOpacity={1}
              >
                <animate
                  attributeName="offset"
                  dur="2s"
                  repeatCount="indefinite"
                  values="-1; 3"
                />
              </stop>
            </linearGradient>
          </defs>
        </svg>
      </div>
    </article>
  </div>
</div>
`;

exports[`SystemPolicyCards component should render real table 1`] = `
<div
  className="pf-l-grid pf-m-gutter"
>
  <div
    className="pf-l-grid__item pf-m-12-col-on-sm pf-m-12-col-on-md pf-m-6-col-on-lg pf-m-4-col-on-xl"
  >
    <article
      className="pf-c-card"
    >
      <div
        className="pf-c-card__body"
      >
        <div
          className="pf-c-content margin-bottom-md"
        >
          <small
            className="margin-bottom-none"
            data-pf-content={true}
          >
            External policy
          </small>
          <h4
            className="margin-bottom-top-none"
            data-pf-content={true}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <span
              width={0}
            >
              <span />
              <span>
                PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7
              </span>
              <span
                style={
                  Object {
                    "left": 0,
                    "position": "fixed",
                    "top": 0,
                    "visibility": "hidden",
                  }
                }
              >
                …
              </span>
            </span>
          </h4>
        </div>
        <div
          className="margin-bottom-md"
        >
          <div
            className="ins-c-policy-card ins-m-noncompliant"
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                transform=""
              />
            </svg>
             Noncompliant
          </div>
          <small
            className=""
            data-pf-content={true}
          >
            30
             of 
            40
             rules passed (
            75%
            )
          </small>
        </div>
        <div
          className="margin-bottom-md"
        >
          <p
            className="wrap-break-word"
            data-pf-content={true}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            Profile 
            <br />
            <span
              width={0}
            >
              <span />
              <span>
                xccdf_org.ssgproject.content_profile_pci-dss
              </span>
              <span
                style={
                  Object {
                    "left": 0,
                    "position": "fixed",
                    "top": 0,
                    "visibility": "hidden",
                  }
                }
              >
                …
              </span>
            </span>
          </p>
        </div>
        <small
          className="margin-bottom-none"
          data-pf-content={true}
        >
          Last scanned: 
          <span>
            11 months ago
          </span>
        </small>
      </div>
    </article>
  </div>
</div>
`;
